<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    
    android:orientation="horizontal" >
    
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="30dp"
    android:id="@+id/fc_om_order_main_group_lay"
    android:orientation="horizontal" >
   
    <ImageView android:layout_width="16dp"
	  android:layout_height="16dp"
	  android:layout_marginRight="5dp"
	  android:layout_marginTop="4dp"
	  android:layout_marginBottom="4dp"
	  android:gravity="center_vertical"
	  
	  />
    
    <TextView
		android:layout_width="75dp" 
    	android:layout_height="fill_parent"
    	android:textColor="@color/Black"
    	android:includeFontPadding="true"
    	android:gravity="center_vertical"
    	android:text="@string/fc_om_order_id"
    	>
		
        </TextView>
        
    
     <TextView
		android:layout_width="75dp" 
    	android:layout_height="fill_parent"
    	android:textColor="@color/Black"
    	android:includeFontPadding="true"
    	android:gravity="center_vertical"
    	android:text="@string/fc_om_received"
    	>

        </TextView>
         <TextView
		android:layout_width="75dp" 
    	android:layout_height="fill_parent"
    	android:textColor="@color/Black"
    	android:includeFontPadding="true"
    	android:gravity="center_vertical"
    	android:text="@string/fc_om_needed"
    	>

        </TextView>
     
         
          <TextView
		android:layout_width="225dp" 
    	android:layout_height="wrap_content"
    	android:textColor="@color/Black"
    	android:includeFontPadding="true"
    	android:gravity="center_vertical"
    	android:text="@string/fc_om_name"
    	>

        </TextView>
        
           <TextView
		android:layout_width="50dp" 
    	android:layout_height="fill_parent"
    	android:textColor="@color/Black"
    	android:includeFontPadding="true"
    	android:gravity="center_vertical"
    	android:text="@string/fc_om_items"
    	>

        </TextView>
        
            <TextView
		android:layout_width="72dp" 
    	android:layout_height="fill_parent"
    	android:textColor="@color/Black"
    	android:includeFontPadding="true"
    	android:gravity="center_vertical"
    	android:text="@string/fc_om_total_cost"
    	>

        </TextView>
        
            <TextView
		android:layout_width="125dp" 
    	android:layout_height="fill_parent"
    	android:textColor="@color/Black"
    	android:includeFontPadding="true"
    	android:gravity="center_vertical"
    	android:text="@string/fc_om_disposition"
    	>

        </TextView>
        
            <TextView
		android:layout_width="40dp" 
    	android:layout_height="fill_parent"
    	android:textColor="@color/Black"
    	android:includeFontPadding="true"
    	android:gravity="center_vertical"
    	android:text="@string/fc_om_here"
    	>

        </TextView>
        </LinearLayout>
</LinearLayout>